# noticer

./: .gitignore  Cargo.toml  README.md
.database/migration/: task.sql
.docs/: design.drawio
crates/executor/: Cargo.toml
crates/executor/src/: executor.rs  lib.rs  main.rs  sender.rs
crates/executor/src/executor/: manager.rs  waterbot.rs
crates/executor/src/sender/: dingtalk.rs
crates/executor/tests/: executor_test.rs
crates/task-manager/: Cargo.toml
crates/task-manager/src/: main.rs  task.rs
crates/task-manager/src/scheduler/: scheduler.rs
crates/task-manager/src/task/: entity.rs  repo.rs
executor/src/sender/: dingtalk.rs
task-manager/: Cargo.toml
task-manager/src/: lib.rs  task.rs
task-manager/src/scheduler/: scheduler.rs
task-manager/src/task/: entity.rs  repo.rs
